Fixed input shake and extended comfort message time to 6 seconds
Increased the timeout duration from 3000ms to 6000ms in the response handling logic.

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
           setTimeout(() => {
             setStage(1);
             setShowResponse(false);
-          }, 3000);
+          }, 6000);
         }
       };
 
       const WelcomeScreen = () => (
         <div className="min-h-screen bg-gradient-to-b from-blue-900 via-purple-800 to-orange-500 flex items-center justify-center p-8 text-white">
-          <div className="max-w-2xl text-center space-y-8 animate-fade-in">
+          <div className="max-w-2xl text-center space-y-8">
             <div className="text-6xl mb-4">🌅</div>
             <h1 className="text-5xl font-bold mb-4">Journey of Kindness</h1>
             <h2 className="text-3xl mb-8">慈悲之旅</h2>
