Refactor conflict checking and update button styles
Fixed Stage 4 completion button and added reset functionality

- Ensured "Enter Ataraxy Portico" button displays correctly when stage completes
- Added animation to completion message
- Added "Reset Board" button for users who want to try again
- Improved button visibility with larger size and shadow
```
6. 等 1-2 分鐘
7. 測試：https://aadl11.github.io/meihsien/
8. Ctrl+Shift+R 強制重新整理

---

## 🧪 **測試步驟：**

完成 Stage 4 的一個有效解法：
```
Row 0: 放在 column 1 (位置 1)
Row 1: 放在 column 3 (位置 7)  
Row 2: 放在 column 0 (位置 8)
Row 3: 放在 column 2 (位置 14)

--- a/index.html
+++ b/index.html
@@ -742,7 +742,8 @@
           
           const placed = newBoard.filter(Boolean).length;
           setQueensPlaced(placed);
-          setConflicts(checkConflicts(newBoard));
+          const newConflicts = checkConflicts(newBoard);
+          setConflicts(newConflicts);
         };
 
         const isComplete = queensPlaced === 4 && conflicts === 0;
@@ -796,7 +797,7 @@
               </div>
 
               {isComplete && (
-                <div className="mt-8 text-center">
+                <div className="mt-8 text-center animate-fade-in">
                   <div className="bg-orange-100 p-6 rounded-xl mb-4">
                     <p className="text-xl text-orange-800 leading-relaxed">
                       完美配置！志工排班完成！✨<br/>
@@ -809,8 +810,27 @@
                       Let us enter the peaceful portico, to restore inner peace...
                     </p>
                   </div>
-                  <button onClick={() => setStage(5)} className="bg-gradient-to-r from-orange-500 to-red-500 text-white px-12 py-4 rounded-full text-xl font-bold hover:scale-105 transition-transform">
+                  <button 
+                    onClick={() => setStage(5)} 
+                    className="bg-gradient-to-r from-orange-500 to-red-500 text-white px-12 py-4 rounded-full text-xl font-bold hover:scale-105 transition-transform shadow-lg"
+                  >
                     進入寧靜門廊 / Enter Ataraxy Portico →
+                  </button>
+                </div>
+              )}
+
+              {!isComplete && (
+                <div className="mt-8 text-center">
+                  <button 
+                    onClick={() => {
+                      const newBoard = Array(16).fill(false);
+                      setQueensBoard(newBoard);
+                      setQueensPlaced(0);
+                      setConflicts(0);
+                    }}
+                    className="bg-gray-400 text-white px-8 py-3 rounded-full text-lg font-bold hover:scale-105 transition-transform"
+                  >
+                    重置排班 / Reset Board
                   </button>
                 </div>
               )}
