Fix: Resolve backward text input in Stage 5 meditation textarea
Added direction: ltr styling to fix reversed text display bug

--- a/index.html
+++ b/index.html
@@ -1080,6 +1080,7 @@
                       onChange={(e) => setUserReflection(e.target.value)}
                       placeholder="寫下你此刻的感受... / Write your reflections..."
                       className="w-full h-32 p-4 border-2 border-indigo-300 rounded-lg text-lg focus:outline-none focus:border-indigo-500"
+                      style={{direction: 'ltr', unicodeBidi: 'normal', textAlign: 'left'}}
                       autoFocus
                     />
                     <button 
